--- a/.editorconfig
+++ b/.editorconfig
@@ -3,15 +3,15 @@ root = true
 
 [*]
 charset = utf-8
-end_of_line = lf
 indent_style = space
 indent_size = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
+end_of_line = lf  # Garante que todos os arquivos usem LF
 
 [*.ts]
-quote_type = single
-ij_typescript_use_double_quotes = false
+# Removido quote_type (não suportado pelo EditorConfig)
+# Aspas simples devem ser configuradas no Prettier
 
 [*.md]
 max_line_length = off
