--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
 		"format": "npx prettier . --write",
 		"lint": "ng lint",
 		"lint:fix": "ng lint --fix",
-		"prepare": "husky"
+		"prepare": "husky",
+		"e2e": "ng e2e",
+		"cypress:open": "cypress open",
+		"cypress:run": "cypress run"
 	},
 	"private": true,
 	"dependencies": {
@@ -48,6 +51,7 @@
 		"@angular-devkit/build-angular": "^19.0.4",
 		"@angular/cli": "^19.2.0",
 		"@angular/compiler-cli": "^19.0.0",
+		"@cypress/schematic": "^3.0.0",
 		"@tailwindcss/postcss": "^4.1.10",
 		"@types/express": "^4.17.17",
 		"@types/jasmine": "~5.1.0",
@@ -67,6 +71,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.13",
 		"tailwindcss": "^4.1.10",
 		"typescript": "~5.6.2",
-		"typescript-eslint": "8.18.0"
+		"typescript-eslint": "8.18.0",
+		"cypress": "latest"
 	}
 }
