--- a/angular.json
+++ b/angular.json
@@ -47,8 +47,8 @@
 							"budgets": [
 								{
 									"type": "initial",
-									"maximumWarning": "500kb",
-									"maximumError": "1MB"
+									"maximumWarning": "3.5MB",
+									"maximumError": "4MB"
 								},
 								{
 									"type": "anyComponentStyle",
