--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
 		"lint": "ng lint",
 		"lint:fix": "ng lint --fix",
 		"prepare": "husky",
-		"e2e": "ng e2e",
-		"cypress:open": "cypress open",
-		"cypress:run": "cypress run"
+		"e2e": "ng e2e"
 	},
 	"private": true,
 	"dependencies": {
@@ -51,7 +49,6 @@
 		"@angular-devkit/build-angular": "^19.0.4",
 		"@angular/cli": "^19.2.0",
 		"@angular/compiler-cli": "^19.0.0",
-		"@cypress/schematic": "^3.0.0",
 		"@tailwindcss/postcss": "^4.1.10",
 		"@types/express": "^4.17.17",
 		"@types/jasmine": "~5.1.0",
@@ -71,7 +68,6 @@
 		"prettier-plugin-tailwindcss": "^0.6.13",
 		"tailwindcss": "^4.1.10",
 		"typescript": "~5.6.2",
-		"typescript-eslint": "8.18.0",
-		"cypress": "latest"
+		"typescript-eslint": "8.18.0"
 	}
 }
