--- a/angular.json
+++ b/angular.json
@@ -112,24 +112,6 @@
 						"lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
 					}
 				},
-				"cypress-run": {
-					"builder": "@cypress/schematic:cypress",
-					"options": {
-						"devServerTarget": "joel-estumano-app:serve"
-					},
-					"configurations": {
-						"production": {
-							"devServerTarget": "joel-estumano-app:serve:production"
-						}
-					}
-				},
-				"cypress-open": {
-					"builder": "@cypress/schematic:cypress",
-					"options": {
-						"watch": true,
-						"headless": false
-					}
-				},
 				"ct": {
 					"builder": "@cypress/schematic:cypress",
 					"options": {
@@ -162,6 +144,6 @@
 	},
 	"cli": {
 		"analytics": "118da0e2-5ecd-4618-affc-884175b13f35",
-		"schematicCollections": ["@cypress/schematic", "angular-eslint", "@schematics/angular"]
+		"schematicCollections": ["angular-eslint", "@schematics/angular"]
 	}
 }
