--- a/package.json
+++ b/package.json
@@ -68,6 +68,6 @@
 		"prettier-plugin-tailwindcss": "^0.6.13",
 		"tailwindcss": "^4.1.10",
 		"typescript": "~5.6.2",
-		"typescript-eslint": "8.18.0"
+		"typescript-eslint": "^8.48.0"
 	}
 }
