--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "^19.0.0",
+		"@angular/animations": "^20.3.13",
 		"@angular/cdk": "^19.0.4",
-		"@angular/common": "^19.0.0",
-		"@angular/compiler": "^19.0.0",
-		"@angular/core": "^19.0.0",
-		"@angular/forms": "^19.0.0",
-		"@angular/platform-browser": "^19.0.0",
-		"@angular/platform-browser-dynamic": "^19.0.0",
-		"@angular/platform-server": "^19.0.0",
-		"@angular/router": "^19.0.0",
-		"@angular/ssr": "^19.0.4",
+		"@angular/common": "^20.3.13",
+		"@angular/compiler": "^20.3.13",
+		"@angular/core": "^20.3.13",
+		"@angular/forms": "^20.3.13",
+		"@angular/platform-browser": "^20.3.13",
+		"@angular/platform-browser-dynamic": "^20.3.13",
+		"@angular/platform-server": "^20.3.13",
+		"@angular/router": "^20.3.13",
+		"@angular/ssr": "^20.3.12",
 		"@ng-icons/bootstrap-icons": "^30.2.0",
 		"@ng-icons/boxicons": "^31.1.0",
 		"@ng-icons/core": "^30.2.0",
@@ -46,9 +46,9 @@
 		"zone.js": "~0.15.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^19.0.4",
-		"@angular/cli": "^19.2.0",
-		"@angular/compiler-cli": "^19.0.0",
+		"@angular/build": "^20.3.12",
+		"@angular/cli": "^20.3.12",
+		"@angular/compiler-cli": "^20.3.13",
 		"@tailwindcss/postcss": "^4.1.10",
 		"@types/express": "^4.17.17",
 		"@types/jasmine": "~5.1.0",
@@ -64,10 +64,11 @@
 		"karma-coverage": "~2.2.0",
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.1.0",
+		"postcss": "^8.5.3",
 		"prettier": "^3.6.1",
 		"prettier-plugin-tailwindcss": "^0.6.13",
 		"tailwindcss": "^4.1.10",
-		"typescript": "~5.6.2",
+		"typescript": "~5.9.3",
 		"typescript-eslint": "^8.48.0"
 	}
 }
